--- a/src/Style/Servicios.css
+++ b/src/Style/Servicios.css
@@ -1,20 +1,15 @@
-.container_servicios {
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-}
 
 .section {
     background-color: #f8f8f8;
     border: 2px solid rgba(0,0,0,0.03);
     border-radius: 16px;
-    width: 15%;
-    height: 20rem;
+    height:25rem;
     padding: 36px 24px;
+    transition: all 0.5s;
 }
 
 .section:hover {
-    transform: scale(1.1); /* Efecto de zoom al pasar el mouse */
+    transform: scale(1.05);
 }
 
 .image_icon img{
